Fix brand subtitles on smaller screens

--- a/fc.css
+++ b/fc.css
@@ -164,7 +164,6 @@
 	font-weight: 700;
 	font-size: 16px;
 	color: #01468d;
-	line-height: 0.1;
 }
 
 .brandtext {
